# tools

./: .gitattributes  .gitignore  Justfile  docker-compose.yml  flake.nix  fly.toml  maxmind_license.txt  package-lock.json  package.json
.git-crypt/keys/default/0/: 4931A47DB35EC26B1545187671FDCF0F478CAC79.gpg
.husky/: pre-commit
backend/: Cargo.toml  Dockerfile  deploy.sh  fly.toml
backend-py/: Dockerfile  debug.py  gunicorn.conf.py  requirements.txt  set_env.py
backend-py/app/: main.py
backend-py/app/decorators/: api_response.py
backend-py/app/internal/: context.py
backend-py/app/routes/: ip.py
backend/src/: err.rs  ip_handler.rs  main.rs
frontend/: .babelconfig.js  Caddyfile  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  ui.config.json  webpack.config.js
frontend/src/: App.css  App.d.ts  App.jsx  App.tsx  _router.d.ts  _router.jsx  _router.tsx  _routes.d.ts  _routes.js  _routes.ts
frontend/src/components/Form/: index.d.ts  index.jsx  index.tsx
frontend/src/components/Paginate/: Paginate.d.ts  Paginate.jsx  Paginate.tsx
frontend/src/pages/404/: index.d.ts  index.jsx
frontend/src/pages/Landing/: index.d.ts  index.jsx  index.tsx
frontend/src/util/: auth.ts  bridge.d.ts  bridge.js  bridge.ts  http.d.ts  http.ts  idb.ts
