[package]
name = "hpfm-tool-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-server = "0.5.1"
maxminddb = "0.23.0"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros",  "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

# [target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
tikv-jemallocator = "0.4.0"